<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menuhome"
            android:title="@string/menu_home"
            android:visible="true"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile"
            android:visible="true"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category_icon"
            android:title="@string/category"
            android:visible="true"/>
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/offers_icon"
            android:title="@string/offers"
            android:visible="false"/>
        <item
            android:id="@+id/nav_new_products"
            android:icon="@drawable/autorenew"
            android:title="@string/new_products"
            android:visible="true"/>
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/my_order"
            android:title="@string/my_orders"
            android:visible="true"/>
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/mycart"
            android:title="@string/my_cart"
            android:visible="true"/>

    </group>
</menu>